<resources>
    <string name="app_name">My App Portfolio</string>


    <string name="btn_popular_movies">Popular Movies</string>
    <string name="btn_stock_hawk">Stock Hawk</string>
    <string name="btn_build_bigger">Build it Bigger</string>
    <string name="btn_make_material">Make Your App Material</string>
    <string name="btn_ubiquitous">Go Ubiquitous</string>
    <string name="btn_capstone">Captstone</string>
</resources>
