<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cablevision.com.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:layout_marginTop="30dp"/>

    <Button android:id="@+id/btnPopularMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btn_popular_movies"
        android:layout_below="@+id/textView"
        style="@style/myCustomButtonStyle"
        android:onClick="onBtnPopularMoviesClick" />

    <Button android:id="@+id/btnStockHawk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_stock_hawk"
        android:layout_below="@+id/btnPopularMovies"
        style="@style/myCustomButtonStyle"
        android:onClick="onBtnStockHawkClick" />

    <Button android:id="@+id/btnBuildBigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_build_bigger"
        android:layout_below="@+id/btnStockHawk"
        style="@style/myCustomButtonStyle"
        android:onClick="onBtnBuildBiggerClick" />

    <Button android:id="@+id/btnMakeMaterial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_make_material"
        android:layout_below="@+id/btnBuildBigger"
        style="@style/myCustomButtonStyle"
        android:onClick="onBtnMakeMaterialClick" />

    <Button android:id="@+id/btnUbiquitous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ubiquitous"
        android:layout_below="@+id/btnMakeMaterial"
        style="@style/myCustomButtonStyle"
        android:onClick="onBtnUbiquitousClick" />

    <Button android:id="@+id/btnCapstone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_capstone"
        android:layout_below="@+id/btnUbiquitous"
        style="@style/myCustomButtonStyle"
        android:onClick="onBtnCapstoneClick" />

</RelativeLayout>
